--- a/android/build.gradle
+++ b/android/build.gradle
@@ -17,6 +17,14 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+        implementation(project(':react-native-maps')){
+            exclude group: 'com.google.android.gms', module: 'play-services-base'
+            exclude group: 'com.google.android.gms', module: 'play-services-maps'
+        }
+   
+        implementation 'com.google.android.gms:play-services-base:17.1.0'
+        implementation 'com.google.android.gms:play-services-maps:17.1.0'
     }
 }
 
