--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "16.8.3",
     "react-native": "0.59.10",
     "react-native-gesture-handler": "~1.4.1",
+    "react-native-maps": "0.26.1",
     "react-native-reanimated": "~1.3.0",
     "react-native-screens": "1.0.0-alpha.23",
     "react-native-unimodules": "0.6.0",
@@ -21,10 +22,6 @@
   "devDependencies": {
     "@babel/core": "^7.6.0",
     "babel-jest": "24.9.0",
-    "jest": "24.9.0",
-    "jetifier": "^1.6.4",
-    "metro-react-native-babel-preset": "0.56.0",
-    "react-test-renderer": "16.9.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.5.0",
@@ -33,8 +30,12 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
     "husky": "^3.0.9",
+    "jest": "24.9.0",
+    "jetifier": "^1.6.4",
     "lint-staged": "^9.4.2",
-    "prettier": "^1.18.2"
+    "metro-react-native-babel-preset": "0.56.0",
+    "prettier": "^1.18.2",
+    "react-test-renderer": "16.9.0"
   },
   "jest": {
     "preset": "react-native"
