--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "expo": "^35.0.0",
+    "flexbox-react": "^4.4.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "0.59.10",
     "react-native-gesture-handler": "~1.4.1",
     "react-native-maps": "0.26.1",
+    "react-native-material-ui": "^1.30.1",
     "react-native-reanimated": "~1.3.0",
     "react-native-screens": "1.0.0-alpha.23",
     "react-native-unimodules": "0.6.0",
