--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
       }
     ],
     "no-use-before-define": [1],
-    "no-unused-vars": [1]
+    "no-unused-vars": [1],
+    "react/prop-types": [0]
   }
 }
