--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-screens": "1.0.0-alpha.23",
     "react-native-unimodules": "0.6.0",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-web": "^0.11.7"
+    "react-native-web": "^0.11.7",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.16"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
