--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "16.8.3",
     "react-native": "0.59.10",
     "react-native-gesture-handler": "~1.4.1",
+    "react-native-google-places-autocomplete": "^1.3.9",
     "react-native-maps": "0.26.1",
     "react-native-material-ui": "^1.30.1",
     "react-native-paper": "^3.2.1",
