last minute ting

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -41,6 +41,8 @@ target 'climateactionmobile' do
 
   pod 'react-native-geolocation', :path => '../node_modules/@react-native-community/geolocation'
 
+  pod 'react-native-maps', :path => '../node_modules/react-native-maps'
+
 end
 
 post_install do |installer|
