--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@mapbox/polyline": "^1.1.0",
     "@react-native-community/geolocation": "^2.0.2",
     "expo": "^35.0.0",
     "flexbox-react": "^4.4.0",
@@ -15,7 +16,7 @@
     "react-dom": "16.8.3",
     "react-native": "0.59.10",
     "react-native-gesture-handler": "~1.4.1",
-    "react-native-maps": "0.26.1",
+    "react-native-maps": "^0.26.1",
     "react-native-material-ui": "^1.30.1",
     "react-native-paper": "^3.2.1",
     "react-native-reanimated": "~1.3.0",
