--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
   "scripts": {
     "postinstall": "jetify",
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "web": "expo start --web",
-    "start": "react-native start",
+    "eject": "expo eject",
     "test": "jest"
   },
   "dependencies": {
     "@mapbox/polyline": "^1.1.0",
     "@react-native-community/geolocation": "^2.0.2",
-    "expo": "^35.0.0",
     "flexbox-react": "^4.4.0",
+    "expo": "^35.0.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
-    "react-native": "0.59.10",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native-web": "^0.11.7",
     "react-native-gesture-handler": "~1.4.1",
     "react-native-maps": "^0.26.1",
     "react-native-material-ui": "^1.30.1",
@@ -23,7 +25,6 @@
     "react-native-screens": "1.0.0-alpha.23",
     "react-native-unimodules": "0.6.0",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-web": "^0.11.7",
     "reanimated-bottom-sheet": "^1.0.0-alpha.16"
   },
   "devDependencies": {
