--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,10 @@
 {
   "env": {
-    "node": true
+    "node": true,
+    "shared-node-browser": true
+  },
+  "globals": {
+    "fetch": false
   },
   "extends": ["airbnb", "prettier"],
   "plugins": ["prettier"],
