--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@mapbox/polyline": "^1.1.0",
     "@react-native-community/geolocation": "^2.0.2",
-    "flexbox-react": "^4.4.0",
     "expo": "^35.0.0",
+    "expo-constants": "^7.0.1",
+    "expo-location": "^7.0.0",
+    "expo-permissions": "^7.0.0",
+    "flexbox-react": "^4.4.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
-    "react-native-web": "^0.11.7",
     "react-native-gesture-handler": "~1.4.1",
     "react-native-maps": "^0.26.1",
     "react-native-material-ui": "^1.30.1",
@@ -25,6 +27,7 @@
     "react-native-screens": "1.0.0-alpha.23",
     "react-native-unimodules": "0.6.0",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-web": "^0.11.7",
     "reanimated-bottom-sheet": "^1.0.0-alpha.16"
   },
   "devDependencies": {
